--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "xufei1987/campus.cherry.cn",
-    "description": "xiaoyuanxing",
+    "name": "xufei1987/composer_demo",
+    "description": "composer_demo",
     "type": "project",
     "license": "MIT",
     "authors": [
